# YadroTestProblem

./: .gitignore  CMakeLists.txt  README.md
include/: Help.hpp  InputEvents.hpp  OutputEvents.hpp  Table.hpp  Tools.hpp
src/: InputEvents.cpp  OutputEvents.cpp  Table.cpp  Tools.cpp  main.cpp
